--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,278 +1,235 @@
-.main {
+.container {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+
+
+.socialMobile {
+  display: none;
 }
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+.navMobile {
+  display: none;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.left {
+  width: 50%;
+  height: 100vh;
+  background-image: radial-gradient(rgba(0, 0, 0, 0.085) 1.5px, transparent 0);
+  background-size: 40px 40px;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.right {
+  width: 50%;
+  height: 100vh;
+  background: #374151;
+  background-image: radial-gradient(rgba(252, 252, 252, 0.085) 1.5px, transparent 0);
+  background-size: 40px 40px;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
+.leftContainer {
+  /* background: red; */
+  height: 100vh;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.rightContainer {
+  /* background: red; */
+  height: 100vh;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .logo,
-.thirteen {
-  position: relative;
+.nav {
+  height: 10%;
+  width: 100%;
 }
 
-.thirteen {
+.nav {
+  display: flex;
+  justify-content: center;
+}
+
+.navItems {
+  padding-top: 33px;
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+}
+
+.navItems a {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #ffff;
+  padding: 10px;
+}
+
+.navItems a:hover {
+  /* background: #37BE43; */
+  border-radius: 6px;
+  color: #37BE43;
+}
+
+
+
+.caption,
+.animation {
+  /* background: rgb(25, 74, 220); */
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.caption h1 {
+  font-style: normal;
+  font-weight: 200;
+  font-size: 56px;
+  line-height: 68px;
+  /* or 117% */
+  color: #374151;
+  margin-bottom: 33px;
+}
+
+
+
+.social,
+.footer {
+  display: flex;
+  height: 10%;
+  width: 100%;
+}
+
+.social {
+  display: flex;
+  width: 110px;
+  justify-content: space-between;
+}
+
+.footer {
+  justify-content: center;
+  align-items: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  /* identical to box height */
+
+
+  color: #888F99;
+}
+
+.logo img {
+  width: 241px;
+  padding-top: 25px;
+}
+
+.caption a {
+  text-decoration: none;
+  border: 2px solid #37BE43;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  width: 223px;
+  color: #37BE43;
+  text-align: center;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+  border-radius: 8px;
+  text-justify: distribute;
+}
+
+.caption a:hover {
+  color: #374151;
+  background: #37BE43;
+}
+
+.socialIcon {
+  width: 50px;
+  height: 50px;
+  /* background: yellow; */
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
 }
 
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
-
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
-}
-
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+@media only screen and (max-width: 1200px) {
+  .right{
+    display: none;
   }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
-
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
+  .left {
     width: 100%;
   }
-
-  .description p {
+  .logo {
+    justify-content: center;
+    display: flex;
+  }
+  .caption {
     align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
+  }
+  .caption h1 {
+    text-align: center;
+  }
+  .social {
+    width: 100%;
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .caption h1 {
+    font-size: 36px;
+  }
+
+  .caption a {
+    font-size: 16px;
+    width: 200px;
+  }
+
+  .leftContainer {
+    margin: 0;
+  }
+
+  .social {display: none;}
+
+  .navMobile {
+    display: flex;
+    height: 10%;
+    align-items: center;
+  }
+
+  .navMobileItems {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 10px;
+  }
+
+  .navMobileItem {
+    border-right: 2px solid #37BE43 ;
+    padding-right: 5px;
+  }
+
+  .socialMobile {
+    display: flex !important;
+    /* border: none; */
+  }
+
+  .socialMobile a {
+    /* display: flex !important; */
     border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
+    padding-top: 60px;
   }
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
+  .followUs {
+    padding-top: 33px;
+    font-size: 18px;
   }
 }
