--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,7 +108,7 @@
 
 .mobBlockContainer {
   display: flex;
-  position: fixed;
+  /* position: fixed; */
   z-index: 0;
   display: block;
   padding: 10px;
