--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,4 @@
+/* Mobile home */
 .Mobcontainer {
   display: none;
 }
@@ -7,6 +8,10 @@
     display: block;
     background-image: radial-gradient(rgb(214, 214, 214) 1px, transparent 0);
     background-size: 30px 30px;
+  }
+
+  .container {
+    display: none;
   }
 }
 
@@ -254,4 +259,183 @@ a.mobActiveNav {
   padding-right: 20px;
   background: none;
   border: none;
+}
+
+/* Desktop Home */
+
+.container {
+
+  overflow: hidden;
+  /* background: red; */
+  height: 100vh;
+  display: flex;
+}
+
+.leftContainer {
+  /* display: flex; */
+  background-image: radial-gradient(rgba(225, 225, 225, 0.688) 2px, transparent 0);
+  background-size: 30px 30px;
+  width: 50%;
+}
+
+.rightContainer {
+  width: 50%;
+  background: #374151;
+  background-image: radial-gradient(rgba(77, 77, 77, 0.618) 2px, transparent 0);
+  background-size: 30px 30px;
+}
+
+.logo,
+.nav {
+  height: 10%;
+  /* background: green; */
+  margin-left: 10%;
+  display: flex;
+  align-items: center;
+}
+
+.nav {
+  justify-content: center;
+}
+
+.navItems {
+  display: flex;
+  width: 300px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.caption,
+.animation {
+  height: 80%;
+  display: flex;
+  /* align-items: center; */
+  margin-left: 10%;
+}
+
+.caption {
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer,
+.social {
+  height: 10%;
+  display: flex;
+  align-items: center;
+  margin-left: 10%;
+}
+
+.logo img {
+  width: 241px;
+}
+
+.nav a {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: white;
+  text-decoration: none;
+}
+
+
+.nav a:hover {
+  color: #37BE43 !important;
+}
+.active a {
+  color: #37BE43 !important;
+  text-decoration: underline !important;
+  text-underline-offset: 5px;
+}
+
+.caption h1 {
+  font-weight: 200;
+  font-size: 48px;
+  line-height: 56px;
+  /* or 117% */
+  color: #374151;
+}
+
+.caption a {
+  color: #37BE43;
+  border: 2px solid #37BE43;
+  width: 233px;
+  height: 56px;
+  line-height: 56px;
+  text-align: center;
+  border-radius: 8px;
+  font-weight: 500;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.BlockContainer {
+  z-index: 0;
+  display: block;
+}
+
+.Block {
+  position: relative;
+  box-sizing: border-box;
+  float: left;
+  margin: 45px 45px 45px 45px;
+  width: 5px;
+  height: 5px;
+  background: rgb(55, 65, 81);
+  opacity: 1;
+}
+
+.Block:nth-child(4n+1) {
+  animation: wave 4s ease .0s infinite;
+}
+
+.Block:nth-child(4n+2) {
+  animation: wave 4s ease .4s infinite;
+}
+
+.Block:nth-child(4n+3) {
+  animation: wave 4s ease .6s infinite;
+}
+
+.Block:nth-child(4n+4) {
+  animation: wave 4s ease .8s infinite;
+  margin-right: 0;
+}
+
+@keyframes wave {
+  0% {
+    top: 30px;
+    opacity: 1;
+    background: #37BE43;
+    backdrop-filter: blur(15px) saturate(3);
+    background-size: 35px 35px;
+    background-attachment: 10px;
+    background-position-x: 12.5px;
+    background-position-y: 12.5px;
+  }
+
+  50% {
+    top: 0px;
+    opacity: 1;
+    /* backdrop-filter: blur(15px) saturate(3); */
+    background: #37BE43;
+    background-attachment: 10px;
+    background-position-x: 12.5px;
+    background-position-y: 12.5px;
+  }
+
+  100% {
+    top: 30px;
+    opacity: 1;
+    /* backdrop-filter: blur(15px) saturate(3); */
+    background-attachment: 10px;
+    background-position-x: 12.5px;
+    background-position-y: 12.5px;
+    background: #ffffff6a;
+  }
+}
+
+.animation {
+  align-items: center;
+  justify-content: center;
 }
