--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,7 +17,7 @@
 
 .Mobcontainer {
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .Mobheader {
@@ -499,18 +499,79 @@ a.mobActiveNav {
   /* padding-left: 10%; */
 }
 
-.mobcaseStudyItem:hover{
+.mobcaseStudyItem:hover {
   color: #37BE43;
 }
 
 .caseStudyVector {
   padding-right: 20px;
 }
+
 .mobcaseStudyItemsContainer {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+.mobBlogP {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.mobBlogP img {
+  width: 300px;
+  padding-top: 20px;
+}
+
+.mobBlogP h2 {
+  text-align: center;
+  font-weight: 600;
+font-size: 28px;
+line-height: 150%;
+/* or 42px */
+
+text-align: center;
+letter-spacing: 0.01em;
+
+color: #374151;
+
+transform: matrix(1, 0, 0, 1, 0, 0);
+margin-bottom: 0;
+}
+
+.mobBlogP h3 {
+  text-align: center;
+  font-weight: 600;
+font-size: 22px;
+line-height: 150%;
+/* or 33px */
+
+text-align: center;
+letter-spacing: 0.01em;
+
+color: #2FAC3A;
+
+transform: matrix(1, 0, 0, 1, 0, 0);
+margin-top: 0;
+}
+
+.mobBlogP p {
+  padding-left: 10%;
+  padding-right: 10%;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  /* or 24px */
+
+  letter-spacing: 0.01em;
+
+  color: #374151;
+
+  transform: matrix(1, 0, 0, 1, 0, 0);
+}
+
 .mobcaseStudyItems {
   display: flex;
   flex-direction: column;
@@ -521,7 +582,8 @@ a.mobActiveNav {
 }
 
 .underline {
-  border: 1px solid #DCDCDC;;
+  border: 1px solid #DCDCDC;
+  ;
   margin-top: 20px;
 }
 
@@ -539,7 +601,7 @@ a.mobActiveNav {
   margin-right: 50%;
 }
 
-.caseStudyMain h1{
+.caseStudyMain h1 {
   font-weight: 300;
   color: #374151;
 }
