--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,11 +3,26 @@
   display: none;
 }
 
+.mobMobileContainer {
+  display: none;
+}
+
 @media screen and (max-width: 900px) {
   .Mobcontainer {
     display: block;
     background-image: radial-gradient(rgb(214, 214, 214) 1px, transparent 0);
     background-size: 30px 30px;
+  }
+
+  .mobMobileContainer {
+    display: block;
+    background-image: radial-gradient(rgba(214, 214, 214, 0.427) 1px, transparent 0);
+    background-size: 30px 30px;
+    margin-bottom: 20px;
+  }
+
+  .blogBody {
+    display: none !important;
   }
 
   .container {
@@ -24,7 +39,7 @@
   margin-left: 20px;
   margin-right: 20px;
   display: flex;
-  margin-top: 18px;
+  /* margin-top: 18px; */
   justify-content: space-between;
 }
 
@@ -463,6 +478,22 @@ a.mobActiveNav {
   transform: matrix(1, 0, 0, 1, 0, 0);
 }
 
+.mobBannerBlog {
+  height: 100px;
+  background: #374151;
+  margin-top: 10px;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 150%;
+  /* identical to box height, or 24px */
+  text-align: center;
+  letter-spacing: 1px;
+  padding-top: 20px;
+  color: #9F9F9F;
+  transform: matrix(1, 0, 0, 1, 0, 0);
+}
+
+.mobBannerBlog a,
 .mobBanner a {
   text-decoration: none;
   color: #888F99;
@@ -472,6 +503,7 @@ a.mobActiveNav {
   color: #37BE43;
 }
 
+.mobBannerBlog h1,
 .mobBanner h1 {
   font-weight: 200;
   font-size: 28px;
@@ -518,6 +550,7 @@ a.mobActiveNav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 20px;
 }
 
 .mobBlogP img {
@@ -528,33 +561,33 @@ a.mobActiveNav {
 .mobBlogP h2 {
   text-align: center;
   font-weight: 600;
-font-size: 28px;
-line-height: 150%;
-/* or 42px */
+  font-size: 28px;
+  line-height: 150%;
+  /* or 42px */
 
-text-align: center;
-letter-spacing: 0.01em;
+  text-align: center;
+  letter-spacing: 0.01em;
 
-color: #374151;
+  color: #374151;
 
-transform: matrix(1, 0, 0, 1, 0, 0);
-margin-bottom: 0;
+  transform: matrix(1, 0, 0, 1, 0, 0);
+  margin-bottom: 0;
 }
 
 .mobBlogP h3 {
   text-align: center;
   font-weight: 600;
-font-size: 22px;
-line-height: 150%;
-/* or 33px */
+  font-size: 22px;
+  line-height: 150%;
+  /* or 33px */
 
-text-align: center;
-letter-spacing: 0.01em;
+  text-align: center;
+  letter-spacing: 0.01em;
 
-color: #2FAC3A;
+  color: #2FAC3A;
 
-transform: matrix(1, 0, 0, 1, 0, 0);
-margin-top: 0;
+  transform: matrix(1, 0, 0, 1, 0, 0);
+  margin-top: 0;
 }
 
 .mobBlogP p {
@@ -604,4 +637,178 @@ margin-top: 0;
 .caseStudyMain h1 {
   font-weight: 300;
   color: #374151;
+}
+
+.blogBody {
+  background-image: radial-gradient(rgba(185, 184, 184, 0.525) 1px, transparent 0);
+  background-size: 30px 30px;
+}
+
+.blogContainer {
+  margin-left: 10%;
+  margin-right: 10%;
+  /* margin-bottom: 50px; */
+}
+
+.blogHeader {
+  display: flex;
+}
+
+.blogLogo {
+  width: 50%;
+  padding-top: 20px;
+}
+
+.blogLogo img {
+  width: 241px;
+}
+
+.blogNav {
+  padding-top: 20px;
+  display: flex;
+  width: 50%;
+  justify-content: center;
+}
+
+.blogNavItems {
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.blogNavItem a {
+  text-decoration: none;
+  color: #374151;
+  font-weight: 600;
+}
+
+.blogNavItem a:hover {
+  color: #37BE43;
+}
+
+.blogNavItem a.blogNavH {
+  color: #37BE43;
+  text-decoration: underline;
+  text-decoration-color: #37BE43;
+  text-underline-offset: 5px;
+}
+
+.blogBanner {
+  margin-top: 18px;
+  width: 100%;
+  height: 392px;
+  background: #374151;
+  border-radius: 8px;
+  display: flex;
+}
+
+.blogBreadCrum {
+  width: 50%;
+}
+
+.blogAnim {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+}
+
+.blogCaption {
+  height: 300px;
+  display: flex;
+  align-items: center;
+}
+
+.blogCaption h1 {
+  text-decoration: underline;
+  text-underline-offset: 10px;
+  text-decoration-color: #37BE43;
+  font-weight: 200;
+  font-size: 38px;
+  line-height: 56px;
+  color: #FFFFFF;
+}
+
+
+
+.blogBreadCrum a {
+  color: #888F99;
+  text-decoration: none;
+}
+
+.blogBreadCrum {
+  margin-left: 20px;
+  padding-top: 20px;
+}
+
+.BlogP p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  /* or 24px */
+
+  letter-spacing: 0.01em;
+
+  color: #374151;
+
+  transform: matrix(1, 0, 0, 1, 0, 0);
+}
+
+.BlogP h2 {
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 150%;
+  /* or 42px */
+
+  letter-spacing: 0.01em;
+
+  color: #374151;
+
+  transform: matrix(1, 0, 0, 1, 0, 0);
+
+}
+
+.BlogP h2 span {
+  color: #37BE43;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 150%;
+  /* or 33px */
+
+  letter-spacing: 0.01em;
+
+  color: #2FAC3A;
+}
+
+.blogImage {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.blogImage img {
+  width: 250px;
+}
+
+.blogFooter {
+  display: flex;
+}
+
+.blogSocila {
+  display: flex;
+  width: 50%;
+  padding-top: 100px;
+  justify-content: end;
+}
+
+.blogCopyR {
+  width: 50%;
+  padding-top: 100px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  /* identical to box height */
+
+
+  color: #888F99;
 }
