--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -208,12 +208,12 @@
 .mobMenu {
   /* background: rgba(255, 255, 255, 0.153); */
   background: rgba(255, 255, 255, 0.911);
-  height: 100vh;
+  height: 80vh;
   width: 100%;
   /* opacity: 0.9; */
   /* margin-left: 10%; */
   animation-duration: 0.75s;
-  animation-name: slidein;
+  /* animation-name: slidein; */
   position: absolute;
   overflow: hidden;
   z-index: 1000;
@@ -230,7 +230,7 @@
 @keyframes slidein {
   from {
     margin-left: 100%;
-    width: 300%;
+    width: 100%;
   }
 
   to {
