--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -70,7 +70,7 @@
 
 .mobCaption {
   text-align: center;
-  height: 30%;
+  margin-bottom: 40px;
   /* background: red; */
   display: flex;
   flex-direction: column;
