--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,7 +7,7 @@
   display: none;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1100px) {
   .Mobcontainer {
     display: block;
     background-image: radial-gradient(rgb(214, 214, 214) 1px, transparent 0);
@@ -134,6 +134,16 @@
   padding-top: 20px;
   color: #888F99;
   font-size: 14px;
+}
+
+.footer {
+  justify-content: center;
+  display: flex;
+  color: #888F99;
+  font-size: 14px;
+  position: absolute;
+  bottom: 0;
+  padding-left: 10%;
 }
 
 .mobFooterHome {
@@ -408,7 +418,7 @@ a.mobActiveNav {
   /* height: 10%; */
   display: flex;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .logo {
@@ -639,6 +649,16 @@ a.mobActiveNav {
   /* padding-left: 10%; */
 }
 
+.caseStudyItem {
+  padding-top: 24px;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 21px;
+  color: #374151;
+  display: flex;
+  justify-content: left;
+}
+
 .mobcaseStudyItem:hover {
   color: #37BE43;
 }
@@ -772,18 +792,20 @@ a.mobActiveNav {
 }
 
 .blogContainer {
-  margin-left: 5%;
-  margin-right: 5%;
+  /* margin-left: 5%;
+  margin-right: 5%; */
   /* margin-bottom: 50px; */
 }
 
 .blogHeader {
   display: flex;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .blogLogo {
   width: 50%;
-  padding-top: 50px;
+  padding-top: 30px;
 }
 
 .blogLogo img {
@@ -791,7 +813,7 @@ a.mobActiveNav {
 }
 
 .blogNav {
-  padding-top: 50px;
+  padding-top: 30px;
   display: flex;
   width: 50%;
   justify-content: center;
@@ -823,11 +845,13 @@ a.mobActiveNav {
 
 .blogBanner {
   margin-top: 30px;
-  width: 100%;
+  /* width: 100%; */
   height: 392px;
   background: #374151;
   border-radius: 8px;
   display: flex;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .blogBreadCrum {
@@ -865,8 +889,8 @@ a.mobActiveNav {
 }
 
 .blogBreadCrum {
-  margin-left: 20px;
-  padding-top: 20px;
+  margin-left: 40px;
+  padding-top: 40px;
 }
 
 .BlogP {
@@ -874,17 +898,27 @@ a.mobActiveNav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-bottom: 50px;
+}
+
+.BlogPfenix {
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-top: 10px;
 }
 
 .BlogPfenix p, .BlogP p {
   font-weight: 400;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 24px;
   /* or 24px */
 
-  letter-spacing: 0.01em;
+  /* letter-spacing: 34px; */
 
   color: #374151;
+  letter-spacing: 0.7px;
 
   transform: matrix(1, 0, 0, 1, 0, 0);
 }
@@ -898,17 +932,20 @@ a.mobActiveNav {
   margin-bottom: 0;
   letter-spacing: 0.01em;
   margin-bottom: 50px;
-
   color: #374151;
-
   transform: matrix(1, 0, 0, 1, 0, 0);
+}
 
+h2.classH2 {
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 .BlogPfenix h3, .BlogP h3{
   margin-top: 10px;
   color: #37BE43;
   font-weight: 600;
+  text-align: center;
 }
 
 .BlogPfenix span, .BlogP h3 span{
@@ -964,13 +1001,13 @@ a.mobActiveNav {
 .blogSocila {
   display: flex;
   width: 50%;
-  padding-top: 100px;
+  padding-top: 30px;
   justify-content: end;
 }
 
 .blogCopyR {
   width: 50%;
-  padding-top: 100px;
+  padding-top: 30px;
   font-weight: 400;
   font-size: 14px;
   line-height: 19px;
@@ -1041,9 +1078,11 @@ a.mobActiveNav {
 
 .brand {
   display: flex;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  width: 100%;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  /* width: 100%; */
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .brandLeft {
@@ -1070,6 +1109,13 @@ a.mobActiveNav {
   text-decoration-color: #37BE43;
   text-decoration-thickness: 3px;
 } */
+
+.consultingAreContainer {
+  background-color: rgba(255, 255, 255, 0.09);
+  box-shadow: -2px 1px 14px 3px rgb(145 158 171 / 20%);
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 
 .brandLeft p {
   font-weight: 400;
@@ -1102,12 +1148,17 @@ a.mobActiveNav {
   display: flex;
   width: 100%;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .areaBlock {
+  padding-top: 20px;
   width: 20%;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
+  /* margin-left: 2.5%; */
+  /* margin-right: %; */
+  padding-left: 2%;
+  padding-right: 2%;
+  box-shadow: -1px 1px 10px 1px rgb(145 158 171 / 20%);
 }
 
 .areaBlock h3 {
@@ -1123,14 +1174,19 @@ a.mobActiveNav {
 .areaBlock p {
   font-weight: 400;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 24px;
   /* or 24px */
 
-  letter-spacing: 0.01em;
+  letter-spacing: 1px;
 
   color: #374151;
 
   transform: matrix(1, 0, 0, 1, 0, 0);
+}
+
+.consultingAre {
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .consultingAre h2 {
@@ -1144,11 +1200,22 @@ a.mobActiveNav {
   color: #374151;
 
   transform: matrix(1, 0, 0, 1, 0, 0);
+
+ 
 }
 
 .global {
   display: flex;
   padding-top: 30px;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-bottom: 30px;
+}
+
+.blogFooter {
+  margin-left: 5%;
+  margin-right: 5%;
+  border-top: 1px solid #cecfd0;
 }
 
 .globalLeft {
@@ -1182,7 +1249,6 @@ a.mobActiveNav {
 }
 
 .globalRight p {
-  font-family: 'Segoe UI';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
